<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/sw_profile"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="homemade.com.zebarui.ui.fragments.ProfileFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RelativeLayout
            android:id="@+id/rl_profile_top"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/img_user"
                android:layout_width="@dimen/menu_image_size"
                android:layout_height="@dimen/menu_image_size"
                android:layout_centerHorizontal="true"
                android:layout_margin="@dimen/space_average_big"
                android:contentDescription="@string/user_pic"
                android:src="@drawable/ic_launcher" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_alignParentTop="true"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/btn_profile_tutorial"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:clickable="true"
                    android:contentDescription="@string/tutorial_text"
                    android:src="@drawable/btn_tutorial_states" />

                <ImageView
                    android:id="@+id/btn_profile_notification"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:clickable="true"
                    android:contentDescription="@string/map_text"
                    android:src="@drawable/btn_notification_states" />

                <ImageView
                    android:id="@+id/btn_profile_edit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:clickable="true"
                    android:contentDescription="@string/map_text"
                    android:src="@drawable/btn_edit_states" />
            </LinearLayout>
        </RelativeLayout>

        <TextView
            android:id="@+id/tw_profile_user_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/space_small"
            android:text="@string/default_user_name"
            android:textSize="@dimen/text_size_middle" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/space_small"
            android:gravity="right"
            android:text="@string/label_email"
            android:textSize="@dimen/text_size_small" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/space_small"
            android:gravity="right"
            android:text="@string/label_password"
            android:textSize="@dimen/text_size_small" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/space_small"
            android:gravity="right"
            android:text="@string/label_town"
            android:textSize="@dimen/text_size_small" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/space_small"
            android:gravity="right"
            android:text="@string/label_address"
            android:textSize="@dimen/text_size_small" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/space_small"
            android:gravity="right"
            android:text="@string/label_birth_date"
            android:textSize="@dimen/text_size_small" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/space_small"
            android:gravity="right"
            android:text="@string/label_sex"
            android:textSize="@dimen/text_size_small" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/space_small"
            android:gravity="right"
            android:text="@string/label_phone"
            android:textSize="@dimen/text_size_small" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/space_small"
            android:gravity="right"
            android:text="@string/label_kid_1"
            android:textSize="@dimen/text_size_small" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/space_small"
            android:gravity="right"
            android:text="@string/label_kid_2"
            android:textSize="@dimen/text_size_small" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/space_small"
            android:gravity="right"
            android:text="@string/label_interests"
            android:textSize="@dimen/text_size_small" />

        <Button
            android:id="@+id/btn_profile_logout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/btn_blue_small_states"
            android:textColor="@android:color/white"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/space_middle"
            android:gravity="center"
            android:text="@string/logout_text"
            android:padding="@dimen/space_very_small"
            android:textAllCaps="false"
            android:textSize="@dimen/text_size_small" />
    </LinearLayout>
</ScrollView>

