<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:weightSum="12"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_gravity="top|center_vertical"
        android:layout_weight="6"
        android:layout_marginTop="@dimen/menu_big_margin"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tw_scanner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textSize="@dimen/text_size_very_small"
            android:text="@string/tw_scanner_text"/>

        <Button
            android:id="@+id/btn_launch_scanner"
            android:text="@string/btn_scanner_text"
            android:layout_marginTop="@dimen/space_middle"
            style="@style/BlueBigButton"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_gravity="top|center_vertical"
        android:layout_weight="6"
        android:layout_marginTop="@dimen/menu_big_margin"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tw_card_reader"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textSize="@dimen/text_size_very_small"
            android:text="@string/tw_card_reader_text"/>

        <Button
            android:id="@+id/btn_request_card"
            android:text="@string/btn_card_reader_text"
            android:layout_marginTop="@dimen/space_middle"
            style="@style/BlueBigButton"/>

    </LinearLayout>
</LinearLayout>