<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/fragment_user_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    android:weightSum="12">

    <LinearLayout
        android:id="@+id/profile_launcher"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:layout_weight="6"
        android:layout_marginLeft="@dimen/space_very_small"
        android:clickable="true"
        android:gravity="left|center_horizontal">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/img_user_layout"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:contentDescription="@string/user_pic"
            android:src="@drawable/ic_launcher" />

        <TextView
            android:id="@+id/tw_user_name"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="@dimen/space_very_small"
            android:gravity="center"
            android:textSize="@dimen/text_size_small"
            android:textColor="@color/colorPrimary"
            android:text="@string/default_user_name" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:layout_weight="6"
        android:gravity="right|center_horizontal">

        <ImageView
            android:id="@+id/btn_user_layout_edit"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginRight="@dimen/space_very_small"
            android:clickable="true"
            android:contentDescription="@string/edit_text"
            android:src="@drawable/btn_edit_states" />

        <ImageView
            android:id="@+id/btn_user_layout_refresh"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginRight="@dimen/space_very_small"
            android:clickable="true"
            android:contentDescription="@string/refresh_text"
            android:src="@drawable/btn_refresh_states" />
    </LinearLayout>

</LinearLayout>