<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/nav"
    style="@style/leftBehindMenuScroll"
    android:layout_width="@dimen/menu_width"
    android:layout_height="match_parent">
<RelativeLayout
    android:id="@+id/rl_nav_top_section"
    style="@style/behindMenuItemLabel">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/img_user"
        android:layout_width="@dimen/menu_image_size"
        android:layout_height="@dimen/menu_image_size"
        android:layout_centerHorizontal="true"
        android:layout_margin="@dimen/menu_big_margin"
        android:clickable="true"
        android:contentDescription="@string/user_pic"
        android:src="@drawable/ic_launcher" />

    <ImageView
        android:id="@+id/btn_notification"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:layout_marginRight="@dimen/space_average_big"
        android:layout_marginTop="@dimen/space_average_big"
        android:contentDescription="@string/map_text"
        android:clickable="true"
        android:src="@drawable/btn_notification_states" />

    <TextView
        android:id="@+id/tw_user_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/img_user"
        android:gravity="center"
        android:text="@string/default_user_name"
        style="@style/behindMenuItemLabel"
        android:layout_marginLeft="0dp"/> <!-- override the style for exact centering -->
</RelativeLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/rl_nav_top_section">

        <LinearLayout style="@style/behindMenuScrollContent">

            <!-- can be done with linear ImageView and TextView in LinearLayout
            <LinearLayout
                android:id="@+id/menu_btn_home2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="@dimen/space_very_small">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/space_very_small"
                    android:layout_marginRight="@dimen/space_very_small"
                    android:src="@drawable/home_icn"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:text="@string/card_tickets_text"
                    android:textColor="@android:color/black"
                    android:textSize="@dimen/text_size_small"/>

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/gray" /> -->

            <Button
                android:id="@+id/menu_btn_home"
                style="@style/behindMenuButton"
                android:text="@string/card_tickets_text"
                android:drawableLeft="@drawable/home_icn"/>
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/gray" />

            <Button
                android:id="@+id/menu_btn_offers"
                style="@style/behindMenuButton"
                android:text="@string/offers_text"
                android:drawableLeft="@drawable/offers_icn"/>
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/gray" />
            <Button
                android:id="@+id/menu_btn_map"
                style="@style/behindMenuButton"
                android:text="@string/map_text"
                android:drawableLeft="@drawable/map_icn"/>
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/gray" />
            <Button
                android:id="@+id/menu_btn_add"
                style="@style/behindMenuButton"
                android:text="@string/add_text"
                android:drawableLeft="@drawable/addcard_icn"/>
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/gray" />
        </LinearLayout>
    </ScrollView>

</RelativeLayout>